WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
102495
[chromium] fake drag drop operations in the WebTestProxyBase instead of the WebViewHost
https://bugs.webkit.org/show_bug.cgi?id=102495
Summary
[chromium] fake drag drop operations in the WebTestProxyBase instead of the W...
jochen
Reported
2012-11-16 06:12:00 PST
[chromium] fake drag drop operations in the WebTestProxyBase instead of the WebViewHost
Attachments
Patch
(4.88 KB, patch)
2012-11-16 06:13 PST
,
jochen
no flags
Details
Formatted Diff
Diff
Patch for landing
(5.90 KB, patch)
2012-11-16 11:18 PST
,
jochen
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
jochen
Comment 1
2012-11-16 06:13:28 PST
Created
attachment 174664
[details]
Patch
WebKit Review Bot
Comment 2
2012-11-16 06:15:45 PST
Please wait for approval from
abarth@webkit.org
,
dglazkov@chromium.org
,
fishd@chromium.org
,
jamesr@chromium.org
or
tkent@chromium.org
before submitting, as this patch contains changes to the Chromium public API. See also
https://trac.webkit.org/wiki/ChromiumWebKitAPI
.
WebKit Review Bot
Comment 3
2012-11-16 10:41:01 PST
Comment on
attachment 174664
[details]
Patch Rejecting
attachment 174664
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: patching file Tools/DumpRenderTree/chromium/TestRunner/public/WebTestProxy.h patching file Tools/DumpRenderTree/chromium/TestRunner/src/WebTestProxy.cpp patching file Tools/DumpRenderTree/chromium/WebViewHost.cpp Hunk #1 FAILED at 594. 1 out of 1 hunk FAILED -- saving rejects to file Tools/DumpRenderTree/chromium/WebViewHost.cpp.rej Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply', u'--force', u'--reviewer', u'Adam Barth']" exit_code: 1 cwd: /mnt/git/webkit-commit-queue Full output:
http://queues.webkit.org/results/14844985
jochen
Comment 4
2012-11-16 11:18:52 PST
Created
attachment 174726
[details]
Patch for landing
jochen
Comment 5
2012-11-16 11:19:21 PST
Comment on
attachment 174726
[details]
Patch for landing rebased
WebKit Review Bot
Comment 6
2012-11-16 14:51:48 PST
Comment on
attachment 174726
[details]
Patch for landing Clearing flags on attachment: 174726 Committed
r135006
: <
http://trac.webkit.org/changeset/135006
>
WebKit Review Bot
Comment 7
2012-11-16 14:51:52 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug